--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "version": "1.0.0",
   "description": "Office of Digital Innovation website",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "chokidar-cli": "^2.1.0",
+    "clean-css": "^5.1.2",
+    "node-sass-chokidar": "^1.5.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^8.3.1"
+  },
   "scripts": {
-    "build": "npx @11ty/eleventy --input=./pages --output=_site",
-    "start": "npx @11ty/eleventy --serve --input=./pages --output=_site"
+    "build": "npm run sass:build && npx @11ty/eleventy --input=./pages --output=_site",
+    "start": "npm run sass:build && npx @11ty/eleventy --serve --input=./pages --output=_site",
+    "build-task:scss-compile": "node-sass-chokidar --source-map true src/css/ -o pages/css/",
+    "build-task:autoprefixer": "postcss pages/css/*.css --use autoprefixer -d dist/css",
+    "sass:build": "npm-run-all -p build-task:*",
+    "sass:watch": "chokidar 'src/scss/**/*.scss' -c 'npm run sass:build'",
+    "dev": "npm-run-all -p sass:*"
   },
   "repository": {
     "type": "git",
