--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "Office of Digital Innovation website",
   "main": "index.js",
   "devDependencies": {
+    "@11ty/eleventy": "^0.12.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "autoprefixer": "^10.2.5",
     "chokidar-cli": "^2.1.0",
     "clean-css": "^5.1.2",
     "node-sass-chokidar": "^1.5.0",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^8.3.1"
+    "postcss-cli": "^8.3.1",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "scripts": {
-    "build": "npm run sass:build && npx @11ty/eleventy --input=./pages --output=_site",
-    "start": "npm run sass:build && npx @11ty/eleventy --serve --input=./pages --output=_site",
+    "rollup": "rollup --config src/rollup.config.js",
+    "build": "npm run rollup && npx @11ty/eleventy --input=./pages --output=_site",
+    "start": "npm run rollup && npx @11ty/eleventy --serve --input=./pages --output=_site",
     "build-task:scss-compile": "node-sass-chokidar --source-map true src/css/ -o pages/css/",
     "build-task:autoprefixer": "postcss pages/css/*.css --use autoprefixer -d dist/css",
     "sass:build": "npm-run-all -p build-task:*",
