add 11ty regen after js change

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "scripts": {
     "rollup": "rollup --config src/rollup.config.js",
-    "rollup:watch": "rollup --watch --config src/rollup.config.js",
     "regen": "npx @11ty/eleventy --input=./pages --output=_site",
     "build": "npm run rollup && npx @11ty/eleventy --input=./pages --output=_site",
     "start": "npm run rollup && npx @11ty/eleventy --serve --input=./pages --output=_site",
@@ -26,8 +25,9 @@
     "build-task:autoprefixer": "postcss pages/css/*.css --use autoprefixer -d dist/css",
     "sass:build": "npm-run-all -p build-task:* regen",
     "sass:watch": "chokidar 'src/**/*.scss' -c 'npm run sass:build'",
+    "js:watch": "chokidar 'src/**/*.js' -c 'npm run rollup && npm run regen'",
     "build:watch": "npx @11ty/eleventy --watch --input=./pages --output=_site",
-    "dev": "npm-run-all -p sass:build sass:watch build:watch rollup:watch serve"
+    "dev": "npm-run-all -p sass:build sass:watch build:watch js:watch serve"
   },
   "repository": {
     "type": "git",
